src/test/deca/syntax/invalid/commentaire_incorrect.deca
// Description:
//    commentaire classique incorrect 
//
// Resultats:
//    Ligne 9 :  no viable alternative at input '*'
//    
//

/**/*/